--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  android_intent_plus: ^5.3.0
   dynamic_color: ^1.1.0
   external_app_launcher: ^4.0.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
